feat: add formula type minimize, range, binary - 13 jenis KPI
